compiler-core/src/parse/snapshots/gleam_core__parse__tests__deprecation_attribute_on_type_variant.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1915
expression: "\ntype Wibble {\n    @deprecated(\"1\")\n    Wibble1\n    Wibble2\n}\n"
---
Parsed {
    module: Module {
        name: "",
        documentation: [],
        type_info: (),
        definitions: [
            TargetedDefinition {
                definition: CustomType(
                    CustomType {
                        location: SrcSpan {
                            start: 1,
                            end: 12,
                        },
                        end_position: 61,
                        name: "Wibble",
                        name_location: SrcSpan {
                            start: 6,
                            end: 12,
                        },
                        publicity: Private,
                        constructors: [
                            RecordConstructor {
                                location: SrcSpan {
                                    start: 40,
                                    end: 47,
                                },
                                name_location: SrcSpan {
                                    start: 40,
                                    end: 47,
                                },
                                name: "Wibble1",
                                arguments: [],
                                documentation: None,
                                deprecation: Deprecated {
                                    message: "1",
                                },
                            },
                            RecordConstructor {
                                location: SrcSpan {
                                    start: 52,
                                    end: 59,
                                },
                                name_location: SrcSpan {
                                    start: 52,
                                    end: 59,
                                },
                                name: "Wibble2",
                                arguments: [],
                                documentation: None,
                                deprecation: NotDeprecated,
                            },
                        ],
                        documentation: None,
                        deprecation: NotDeprecated,
                        opaque: false,
                        parameters: [],
                        typed_parameters: [],
                        external_erlang: None,
                        external_javascript: None,
                        external_zig: None,
                    },
                ),
                target: None,
            },
        ],
        names: Names {
            local_types: {},
            imported_modules: {},
            type_variables: {},
            local_value_constructors: {},
            reexport_aliases: {},
        },
        unused_definition_positions: {},
    },
    extra: ModuleExtra {
        module_comments: [],
        doc_comments: [],
        comments: [],
        empty_lines: [],
        new_lines: [
            0,
            14,
            35,
            47,
            59,
            61,
        ],
        trailing_commas: [],
    },
}
